tests/errors/type_used_before_declared_01.f90
program test
    type(t_pair) :: x
    type :: t_pair
      integer :: i
      real :: x
    end type
end program test
